--- a/mvp.html
+++ b/mvp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Latitude vs Humidity</title>
+  <title>MVP Stats and Predictions</title>
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><strong>Lattitude</strong></a>
+                <a class="navbar-brand" href="index.html"><strong>NBA Stats</strong></a>
                 </div>
         
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,15 +34,17 @@
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="temperature.html">Max Temperature</a></li>
-                        <li><a href="humidity.html">Humidity</a></li>
-                        <li><a href="cloudiness.html">Defensive Player of the Year</a></li>
+                        <li><a href="PlayerRegressions.html">Player Stats Linear Regressions</a></li>
+                        <li><a href="mvp.html">MVP Stats and Predictions</a></li>
+                        <li><a href="dpoy.html">Defensive Player of the Year</a></li>
                         <!--<li role="separator" class="divider"></li>-->
-                        <li><a href="windspeed.html">Wind Speed</a></li>
+                        <li><a href="sixthman.html">Sixth Man</a></li>
+                        <li><a href="rookie.html">Rookie of the Year</a></li>
                     </ul>
                     </li>
                     <li><a href="comparison.html">Comparison</a></li>
                     <li><a href="data.html">Data</a></li>
+                    <li><a href="https://www.basketball-reference.com/about/glossary.html" target="_blank">Basketball Terms Reference Glossary</a></li>
                 </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -54,9 +56,30 @@
         <!-- Row 1 -->
         <div class="row">
             <div class="col-sm-6 col-md-12">
-            <h1>Latitude vs Humidity</h1>
-            <img src="https://github.com/olawrence799/homework12_Lattitude/blob/master/LatitudeVsHumidity.png?raw=true" width="100%" alt="Latitude versus Humidity">
+            <h1>MVP Stats Summary</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/MVP%20Slide.png?raw=true" width="100%" alt="MVP Summary"></h1>
             <p>The figure above plots the observed humidity (y-axis) against the city latitude (x-axis). While most cities have an observed humidity of at least 30%, there is not an obvious relationship between latitude and humidity. That said, there are two noticable clusters of data points: latitudes between -20 and 0 tend to have humidity of at least 80%, while latitudes of 60-80 tend to have humidity ratings between 60% and 90%. Additionally, the highest density of 100% humidity observations lie near latitude=0.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>MVP Stats Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MVP_Features.png?raw=true" width="80%" alt="MVP features"></h1>
+            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+            <ul>
+                <!-- <li><a href="PlayerRegressions.html">Player Linear Regression</a></li>
+                <li><a href="humidity.html">Humidity</a></li>
+                <li><a href="dpoy.html">Defensive Player of the Year</a></li>
+                <li><a href="windspeed.html">Wind Speed</a></li> -->
+                <li><a href="https://www.basketball-reference.com/about/glossary.html" target="_blank">Basketball Terms Reference Glossary</a></li>
+            </ul>
             </div>
         </div>
     </div>
