--- a/PlayerRegressions.html
+++ b/PlayerRegressions.html
@@ -40,6 +40,7 @@
                         <!--<li role="separator" class="divider"></li>-->
                         <li><a href="sixthman.html">Sixth Man</a></li>
                         <li><a href="rookie.html">Rookie of the Year</a></li>
+                        <li><a href="position.html">Position and Team Classifications</a></li>
                     </ul>
                     </li>
                     <li><a href="comparison.html">Comparison</a></li>
@@ -56,7 +57,15 @@
         <!-- Row 1 -->
         <div class="row">
             <div class="col-sm-6 col-md-12">
-            <h1>Player Efficiency Rating Linear Regression</h1>
+            <h1>Player Efficiency Rating Linear Regression Features</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/PER_Regression_Features.png?raw=true" width="50%" alt="PER feature coefficients"></h1>
+            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Player Efficiency Rating Linear Regression Residuals</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/PER_residuals.png?raw=true" width="50%" alt="PER residuals"></h1>
             <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
             </div>
@@ -64,13 +73,29 @@
 
         <div class="row">
             <div class="col-sm-6 col-md-12">
+            <h1>Minutes Played Linear Regression Features</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MP_Regression_Features.png?raw=true" width="50%" alt="MP feature coefficients"></h1>
+            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Minutes Played Linear Regression Residuals</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MP_residuals.png?raw=true" width="50%" alt="MP residuals"></h1>
+            <p>The figure above plots the observed maximum temperature (y-axis) against the city latitude (x-axis). This scatter plot reveals a fairly clear relationship between temperature and latitude: temperature tends to be highest at the equator (latitude=0). Interestingly, the northern hemisphere appears to have colder temperatures than the southern hemisphere at comparable distances from the equator. Further, there is more temperature variance across cities with latitude > 0, shown by the vertical spread in data points.</p>
+            </div>
+        </div>
+
+        <!-- <div class="row">
+            <div class="col-sm-6 col-md-12">
             <h1>Player Position Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Pos_Features.png?raw=true" width="80%" alt="MVP features"></h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Pos_Features.png?raw=true" width="50%" alt="MVP features"></h1>
             <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
             <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col-sm-3">
             <ul>
