--- a/position.html
+++ b/position.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>MVP Stats and Predictions</title>
+  <title>Sixth Man</title>
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,21 +57,38 @@
         <!-- Row 1 -->
         <div class="row">
             <div class="col-sm-6 col-md-12">
-            <h1>MVP Stats Summary</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/MVP%20Slide.png?raw=true" width="100%" alt="MVP Summary"></h1>
-            <p>The figure above plots the observed humidity (y-axis) against the city latitude (x-axis). While most cities have an observed humidity of at least 30%, there is not an obvious relationship between latitude and humidity. That said, there are two noticable clusters of data points: latitudes between -20 and 0 tend to have humidity of at least 80%, while latitudes of 60-80 tend to have humidity ratings between 60% and 90%. Additionally, the highest density of 100% humidity observations lie near latitude=0.</p>
+            <h1>Player Position Classification</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Pos_Features.png?raw=true" width="50%" alt="position features"></h1>
+            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-6 col-md-12">
-            <h1>MVP Stats Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MVP_Features.png?raw=true" width="80%" alt="MVP features"></h1>
+            <h1>Player Position Stratified KNN</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Strat_KNN_Pos.png?raw=true" width="50%" alt="position knn"></h1>
+            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Team Classification</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tm_Features.png?raw=true" width="50%" alt="team features"></h1>
             <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
             <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Team Stratified KNN</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Strat_KNN_Tm.png?raw=true" width="50%" alt="team knn"></h1>
+            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-sm-3">
             <ul>
