--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <!--<li role="separator" class="divider"></li>-->
                         <li><a href="sixthman.html">Sixth Man</a></li>
                         <li><a href="rookie.html">Rookie of the Year</a></li>
+                        <li><a href="position.html">Position and Team Classifications</a></li>
                     </ul>
                     </li>
                     <li><a href="comparison.html">Comparison</a></li>
