--- a/sixthman.html
+++ b/sixthman.html
@@ -59,19 +59,30 @@
             <div class="col-sm-6 col-md-12">
             <h1>Sixth Man of the Year Stats Summary</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/Sixth%20Man%20Slide%20.png?raw=true" width="80%" alt="sixth man of the year"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <p>The assist percentage for the Sixth Man of they Year has gradually declined over the past decade to be at around the same percentage as the league average.  Over time the Sixth man of the Year has become more directly involved in the game, relying less on his teammates for scoring and making more field goal attempts. Win Share is decreasing which could possibly be because good players don’t sit on the bench anymore (smaller supply of star players). It could also be because the Sixth Man of the Year is more focused on improving their own abilities and being in the spotlight instead of leveraging the skills of more experienced teammates (Higher 3PA & 2PA with FG% similar to the league average has lowered their WS and AST% over time). The sixth man of the year is also becoming gradually better at keeping the ball in their possession (TOV% decreasing) which could be a reason why they get more play time (MP) than the league average.  The True Salary of the Sixth Man of the Year has gradually dropped over the past decade to a value similar to the league average possibly meaning that these players aren’t truly valuable to the team or its owners but are still widely recognized/ appreciated by fans because of above average attempts to score. It seems that the Sixth man of the Year is becoming increasingly difficult to predict and the award is becoming  less prestigious because the players are making less of a contribution to their team over time with a decreasing value over replacement player (VORP).</p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-6 col-md-12">
-            <h1>Sixth Man of the Year Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/6Man_Features.png?raw=true" width="80%" alt="Sixth Man of the Year features"></h1>
-            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
-            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
-            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            <h1>Sixth Man of the Year Logistic Regression Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/6Man_Regression_Features.png?raw=true" width="50%" alt="Sixth Man of the Year regression features"></h1>
+            <p></p>
+            <!-- <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Sixth Man of the Year Random Forests Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/6Man_Features.png?raw=true" width="50%" alt="Sixth Man of the Year features"></h1>
+            <p></p>
+            <!-- <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-sm-3">
             <ul>
