--- a/dpoy.html
+++ b/dpoy.html
@@ -59,17 +59,24 @@
             <div class="col-sm-6 col-md-12">
             <h1>Defensive Player of the Year Stats Summary</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/DPOY%20Slide.png?raw=true" width="80%" alt="defensive player of the year"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <p>Top defenders (DPOYs) are getting better at recognizing a star player (MVP) and focusing on consistently shutting the threat down with steals. The league average for STL% remains consistent but has gradually increased over the past decade for DPOYs. To reinforce this point, the TOV% has gone up for MVPs over the past decade but the league average remains stable. DRB% and BLK% have dropped over the last decade but 3PA and 3P% have gone up leading me to believe that a DPOY candidate is not only effective at taking possession of the opponents ball (STL) but can also convert the change of possession to a 3 point shot attempt. OWS also climbing over time… are DPOYs become a more rounded offensive player as well?</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Defensive Player of the Year Logistic Regression Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/DPOY_Regression_Features.png?raw=true" width="50%" alt="Defensive Player of the Year regression features"></h1>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-6 col-md-12">
             <h1>Defensive Player of the Year Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/DPOY_Features.png?raw=true" width="80%" alt="Defensive Player of the Year features"></h1>
-            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/DPOY_Features.png?raw=true" width="50%" alt="Defensive Player of the Year features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
-            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
         <div class="row">
