--- a/mvp.html
+++ b/mvp.html
@@ -58,18 +58,28 @@
         <div class="row">
             <div class="col-sm-6 col-md-12">
             <h1>MVP Stats Summary</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/MVP%20Slide.png?raw=true" width="100%" alt="MVP Summary"></h1>
-            <p>The figure above plots the observed humidity (y-axis) against the city latitude (x-axis). While most cities have an observed humidity of at least 30%, there is not an obvious relationship between latitude and humidity. That said, there are two noticable clusters of data points: latitudes between -20 and 0 tend to have humidity of at least 80%, while latitudes of 60-80 tend to have humidity ratings between 60% and 90%. Additionally, the highest density of 100% humidity observations lie near latitude=0.</p>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/MVP%20Slide.png?raw=true" width="80%" alt="MVP Summary"></h1>
+            <p>MVP blurb - Turnovers for MVPs have been gradually increasing over the past decade to be the same rate as the league average. As top defenders become more effective at shutting down threats near the hoop with steals and blocks, MVPs have evolved by improving their ability to make 3 point shots from beyond the arc where shot attempts are more difficult to defend, allowing them to consistently maintain their WS. MVPs are also using other teammates more effectively to score points via assists. (AST% increase). The height of an MVP remains consistent over the past decade as well (75’’-85’’) which is substantially higher than the league average (54’’-73’’).</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>MVP Stats Logistic Regression Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MVP_Regression_Features.png?raw=true" width="50%" alt="MVP regression features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-6 col-md-12">
             <h1>MVP Stats Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MVP_Features.png?raw=true" width="80%" alt="MVP features"></h1>
-            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/MVP_Features.png?raw=true" width="50%" alt="MVP features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
-            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
         <div class="row">
