--- a/rookie.html
+++ b/rookie.html
@@ -58,7 +58,17 @@
             <div class="col-sm-6 col-md-12">
             <h1>Rookie of the Year Stats Summary</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/ROY%20Slide.png?raw=true" width="80%" alt="rookie of the year"></h1>
-            <p>The figure above plots the observed cloudiness (y-axis) against the city latitude (x-axis). While this plot does not suggest any strong correlation between latitude and cloudiness, it is worth noting that most data points lie below 40% or above 60% cloud cover. It's not so common to have cloudiness between 40% and 60%!</p>
+            <p>The Rookies of the Year (ROY) from the past decade all have substantially higher minutes played (MP) than the league average. This could be because they are favorites out of college. (ROYs) all have higher AST% (assist percentage) and WS (win share or games won in which they made a contribution) however the shooting %, steal %, block % are all pretty similar. This leads me to believe that the main characteristic that makes a Rookie of the Year different from the average rookie is the fact they try less to score difficult shots themselves and instead leverage their more experienced teammates to win games via assists. Rookie of the Year award recipients consistently have more ORB and DRB attempts than the rookie average but the ORB% and DRB% are similar to the rookie average. This leads me to believe that the Rookie of the Years distinguish themselves from the average rookie by putting forward exceptional effort on the court but aren’t necessarily better players in terms of ability. ROY have much higher 2PA than the rookie average and the number of 2PA has been increasing over time however their 2P% is similar to the rookie average. ROY have similar 3PA and 3P% to rookie average which reinforces my theory that ROYs leverage their more experienced teammates for difficult shots (3P shots) but are also more willing to take an attempt at a shot that is likely to go in (close shots 2PA).</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Rookie of the Year Logistic Regression Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Regression_Features.png?raw=true" width="80%" alt="Rookie of the Year regression features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
 
@@ -66,9 +76,9 @@
             <div class="col-sm-6 col-md-12">
             <h1>Rookie of the Year Feature Importance</h1>
             <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Features.png?raw=true" width="80%" alt="Rookie of the Year features"></h1>
-            <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
-            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
         <div class="row">
