--- a/rookie.html
+++ b/rookie.html
@@ -43,7 +43,6 @@
                     </ul>
                     </li>
                     <li><a href="comparison.html">Comparison</a></li>
-                    <li><a href="data.html">Data</a></li>
                     <li><a href="https://www.basketball-reference.com/about/glossary.html" target="_blank">Basketball Terms Reference Glossary</a></li>
                 </ul>
                 </div>
@@ -65,7 +64,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-12">
             <h1>Rookie of the Year Logistic Regression Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Regression_Features.png?raw=true" width="80%" alt="Rookie of the Year regression features"></h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Regression_Features.png?raw=true" width="50%" alt="Rookie of the Year regression features"></h1>
             <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
             <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
@@ -75,12 +74,33 @@
         <div class="row">
             <div class="col-sm-6 col-md-12">
             <h1>Rookie of the Year Feature Importance</h1>
-            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Features.png?raw=true" width="80%" alt="Rookie of the Year features"></h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/ROY_Features.png?raw=true" width="50%" alt="Rookie of the Year features"></h1>
             <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
             <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
             <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Rookie Success Logistic Regression Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Rookie_Success_Regression_Features.png?raw=true" width="50%" alt="Rookie Success Logistic Regression features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-12">
+            <h1>Rookie Success Feature Importance</h1>
+            <h1><img src="https://github.com/olawrence799/Project_3/blob/master/Rookie_Success_Features.png?raw=true" width="50%" alt="Rookie Success features"></h1>
+            <!-- <p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"</p>
+            <p>To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.</p>
+            <p>Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p> -->
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-sm-3">
             <ul>
