--- a/sixthman.html
+++ b/sixthman.html
@@ -43,6 +43,7 @@
                         <li><a href="position.html">Position and Team Classifications</a></li>
                     </ul>
                     </li>
+                    <li><a href="position.html">Position and Team Classifications</a></li>
                     <li><a href="comparison.html">Comparison</a></li>
                     <li><a href="https://www.basketball-reference.com/about/glossary.html" target="_blank">Basketball Terms Reference Glossary</a></li>
                 </ul>
