--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="position.html">Position and Team Classifications</a></li>
                     </ul>
                     </li>
-                    <li><a href="position.html">Position and Team Classifications</a></li>
+                    <!-- <li><a href="position.html">Position and Team Classifications</a></li> -->
                     <li><a href="comparison.html">Comparison</a></li>
                     <li><a href="https://www.basketball-reference.com/about/glossary.html" target="_blank">Basketball Terms Reference Glossary</a></li>
                 </ul>
@@ -59,9 +59,7 @@
             <div class="col-sm-6 col-md-12">
             <!-- <h1>NBA Stats Analysis</h1> -->
             <h1><img src="https://prosportsnewsnation.files.wordpress.com/2013/01/nba-stats.jpg" height="50%" width="50%" alt="NBA Stats Photo"></h1>
-            <h1><p>This project aimed to investigate city weather observations provided by the OpenWeatherMap API, with the looming question of "how does weather change as you approach the equator?"
-            To assess this question, we sampled over 500 cities and assembled the data before finally utilizing Matplotlib to visualize various comparisons.
-            Factors investigated included: temperature, cloudiness, wind speed, and humidity. Charts for these different observations can be found on this site, along with the source data used for these visualizations.</p></h1>
+            <h1><p>An analysis of the importance of specific player performance statistics over the past decade (2007-2016) and a deep dive on how the NBA is evolving in terms of selecting its candidates in each of the following categories (MVP, Rookie of the Year, Defensive Player of the Year, Sixth Man of the Year)</p></h1>
             </div>
         </div>
 
