--- a/comparison.html
+++ b/comparison.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <h1>Sixth Man Summary</h1>
-                <div class="box red"><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/Sixth%20Man%20Slide.png?raw=true" width="100%" alt="Sixth Man Summary"></div>
+                <div class="box red"><img src="https://github.com/olawrence799/Project_3/blob/master/Tableau%20Slides/Sixth%20Man%20Slide%20.png?raw=true" width="100%" alt="Sixth Man Summary"></div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
                 <h1>Sixth Man</h1>
